# mlkem-kit

./: .gitignore  .gitmodules  CHANGELOG.md  Package.swift  README.md  THIRD_PARTY_NOTICES.md  build.gradle.kts  settings.gradle.kts
benchmarks/: release-device-results.android-emulator.2026-06-04.json  release-device-results.dotnet-macos-apple-silicon.2026-06-04.json  release-device-results.example.json  release-device-results.ios-iphone17.2026-06-04.json  release-device-results.ios-iphone17.2026-06-05.json  release-device-results.macos-apple-silicon.2026-06-04.json  release-device-results.macos-macbook-pro-mac14-7-apple-m2.2026-06-05.json  release-device-results.schema.json  release-device-results.windows-github-actions.2026-06-04.json  side-channel-timing-sanity-results.schema.json  side-channel-timing-sanity.macos-local-host.2026-06-05.json
docs/: mlkem-audit-checklist.md  mlkem-benchmark-scope-decision.md  mlkem-codex-technical-review-findings.md  mlkem-emsi-dm-production-readiness.md  mlkem-external-review-packet.md  mlkem-fips203-code-map.md  mlkem-internal-ai-review.md  mlkem-production-fallback-risk-acceptance.md  mlkem-provider-and-audit-strategy.md  mlkem-readiness-evidence.md  mlkem-reviewer-handoff.md  mlkem-secret-lifetime-review.md  mlkem-side-channel-review.md
mlkemnative/: build.gradle.kts
mlkemnative/src/main/cpp/: CMakeLists.txt  mlkem_native_android.c
mlkemnative/src/main/cpp/include/: mlkem_native_android.h
readiness/: mlkem-audit-status.json  mlkem-audit-status.schema.json
tools/: check_entropy_boundary.py  check_public_scope.sh  (+4 more)
(+27 files in other folders)
